# truffile

./: .gitignore  README.md  pyproject.toml
app-store/: .gitignore  deploy_arxiv.sh
app-store/arxiv/: .env.example  alphaxiv_client.py  alphaxiv_tools.py  arxiv_background.py  arxiv_bg_worker.py  arxiv_common.py  arxiv_config.py  arxiv_foreground.py  arxiv_tools.py  test_alphaxiv_bg.py  test_bg_cycle.py  test_harness.py  truffile.yaml
app-store/kalshi/: bg_worker.py  truffile.yaml
app-store/reddit/: truffile.yaml
eval/: arxiv_eval.py  arxiv_metrics.py  arxiv_runners.py  arxiv_test_set.py  compare.py
eval/results/: smoke-test_2026-03-24_104453.json  v1-baseline_2026-03-24_110410.json
example-apps/kalshi/: client.py  config.py  kalshi_background.py  kalshi_foreground.py  truffile.yaml
example-apps/reddit/: reddit.py  truffile.yaml
scripts/: test_oai_proxy.py
tests/: test_transport_client.py
truffile/: __init__.py  _version.py  cli.py  client.py
truffile/deploy/: __init__.py  builder.py
truffile/infer/: prompts.py  proxy.py
truffile/schema/: __init__.py  app_config.py
truffile/transport/: __init__.py  client.py
truffle/app/: app_build_pb2.py  app_build_pb2_grpc.py  app_install_pb2.py  app_install_pb2.pyi  app_install_pb2_grpc.py  app_pb2.py  app_pb2.pyi  app_pb2_grpc.py  app_runtime_pb2.py  app_runtime_pb2.pyi  app_runtime_pb2_grpc.py  background_pb2.py  background_pb2.pyi  background_pb2_grpc.py  default_app_manifest_pb2.py  default_app_manifest_pb2.pyi  default_app_manifest_pb2_grpc.py  foreground_pb2.py  foreground_pb2.pyi  (+1 more)
(+104 files in other folders)
