[build-system]
requires = [
    "setuptools>=70",
    "setuptools_scm>=8",
    "wheel",
    "grpcio-tools==1.76.0",
    "protobuf>=6.30.0",
    "googleapis-common-protos>=1.63.2",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"
fallback_version = "0.1.dev0"
version_file = "truffile/_version.py"

[project]
name = "truffile"
dynamic = ["version"]
description = "truffile the TruffleOS SDK - Connect and deploy apps to Truffle devices"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}

dependencies = [
    "protobuf>=6.30.0",
    "googleapis-common-protos>=1.63.2",
    "grpcio==1.76.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "platformdirs>=3.10.0",
    "websockets>=12.0",
    "zeroconf>=0.131.0",
    "mcp==1.26.0",
]

[project.scripts]
truffile = "truffile.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "grpcio-tools==1.76.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["truffile*", "truffle*"]

[tool.setuptools.package-data]
"*" = ["*.pyi", "py.typed"]
